4.2.8
   - Better handling of N-N relations in assembly parser
4.2.7
   - Support for per-entity inheritance in EF7
   - Added option to generate nullable indicators
   - Added temporal table support for EFCore6 and above. These aren't supported by every database, and you're on your own to know if your database supports them.
   - Arrays of native types can now be used as property types in EFCore8+ projects
   - Aggregate ("owned") types can now be stored as JSON properties in EFCore7+ projects
   - Associations with transient, non-collection objects can be stored as JSON properties in EFCore7+ projects
   - Added support for reverse engineering EFCore v8 assemblies
   - Fixes issue when generating code for properties that have a default enumeration value. Thanks to @equipatuequipo for [the pull request](https://github.com/msawczyn/EFDesigner2022/pull/72).
   - Association classes are back, but only for cases where each side of the many-to-many bidirectional association has a single identity property. 
   - Removed EFCore2 and EFCore3 parsers. Those EFCore versions have been obsolete for quite a while. If you need to use them, you can still use the 4.2.5 version of the extension.
   - Constructors with required-but-transient associations no longer have those associations as parameters. If that constructor is needed, add it to the partial class file.
   - Tightened up the concept of transient entities. We're now generating better code for these and the restriction that transient associations must be auto properties has been removed.
   - Entities now update their displays immediately when the Persistent flag is changed.

4.2.5
   - Adds missing XML documentation for public and protected members
   - Fixes "No 'Is Identity' setting when adding a new entity property (version 4.2.44)" (see https://github.com/msawczyn/EFDesigner2022/issues/63)