@@ -243,6 +243,7 @@ namespace EFCore6Parser
 
          foreach (INavigation navigationProperty in entityType.GetDeclaredNavigations().Where(n => n.Inverse == null))
          {
+            System.Diagnostics.Debug.WriteLine($"*** {navigationProperty.ToDebugString(MetadataDebugStringOptions.SingleLineDefault)}");
             ModelUnidirectionalAssociation association = new ModelUnidirectionalAssociation();
 
             association.SourceClassName = navigationProperty.DeclaringType.ClrType.Name;
@@ -269,14 +270,8 @@ namespace EFCore6Parser
                                         ? string.Join(",", fkPropertyDeclarations)
                                         : null;
 
-            string dependentClassName = navigationProperty.ForeignKey.DeclaringEntityType.ClrType.Name;
-            association.SourceRole = dependentClassName == association.SourceClassName
-                                        ? AssociationRole.Dependent
-                                        : AssociationRole.Principal;
-
-            association.TargetRole = dependentClassName == association.TargetClassName
-                                        ? AssociationRole.Dependent
-                                        : AssociationRole.Principal;
+            association.SourceRole = navigationProperty.IsOnDependent ? AssociationRole.Dependent : AssociationRole.Principal;
+            association.TargetRole = navigationProperty.IsOnDependent ? AssociationRole.Principal : AssociationRole.Dependent;
 
             // unfortunately, EFCore doesn't serialize documentation like EF6 did
 
@@ -392,14 +387,8 @@ namespace EFCore6Parser
                                         ? string.Join(",", fkPropertyDeclarations)
                                         : null;
 
-            string dependentClassName = navigationProperty.ForeignKey.DeclaringEntityType.ClrType.Name;
-            association.SourceRole = dependentClassName == association.SourceClassName
-                                        ? AssociationRole.Dependent
-                                        : AssociationRole.Principal;
-
-            association.TargetRole = dependentClassName == association.TargetClassName
-                                        ? AssociationRole.Dependent
-                                        : AssociationRole.Principal;
+            association.SourceRole = navigationProperty.IsOnDependent ? AssociationRole.Dependent : AssociationRole.Principal;
+            association.TargetRole = navigationProperty.IsOnDependent ? AssociationRole.Principal : AssociationRole.Dependent;
 
             result.Add(association);
          }
